Adding LW plug-in template

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -40,6 +40,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/include")
 INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/!deps/jpeg-6b")
 INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/!deps/libpng-1.2.36")
+INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/!deps/lwsdk")
 INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/!deps/tinyxml2")
 INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/!deps/zlib-1.2.3")
 INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/modules/system/include")
