--- a/Emerald/Emerald.rc
+++ b/Emerald/Emerald.rc
@@ -50,20 +50,9 @@ FONT 8, "Ms Shell Dlg"
     RTEXT           "TYPE", IDC_CURVE_EDITOR_MAIN_TYPE, 158, 41, 99, 8, SS_RIGHT
     LTEXT           "Format:", IDC_STATIC, 130, 29, 24, 8, SS_LEFT
     RTEXT           "FORMAT", IDC_CURVE_EDITOR_MAIN_FORMAT, 158, 29, 100, 8, SS_RIGHT
-    GROUPBOX        "Default values", IDC_STATIC, 123, 59, 144, 74
-    LTEXT           "Y Curve:", IDC_STATIC, 130, 86, 28, 8, SS_LEFT
-    LTEXT           "Z Curve:", IDC_STATIC, 130, 102, 28, 8, SS_LEFT
-    LTEXT           "X Curve:", IDC_STATIC, 130, 71, 28, 8, SS_LEFT
-    LTEXT           "W Curve:", IDC_STATIC, 129, 119, 31, 8, SS_LEFT
-    EDITTEXT        IDC_CURVE_EDITOR_MAIN_X_CURVE, 161, 70, 99, 12, ES_AUTOHSCROLL
-    EDITTEXT        IDC_CURVE_EDITOR_MAIN_Y_CURVE, 161, 85, 99, 12, ES_AUTOHSCROLL
-    EDITTEXT        IDC_CURVE_EDITOR_MAIN_Z_CURVE, 161, 101, 99, 12, ES_AUTOHSCROLL
-    EDITTEXT        IDC_CURVE_EDITOR_MAIN_W_CURVE, 161, 117, 99, 12, ES_AUTOHSCROLL
-    GROUPBOX        "Default values", IDC_STATIC, 123, 138, 144, 74
-    PUSHBUTTON      "Edit X Curve..", IDC_CURVE_EDITOR_MAIN_EDIT_X_CURVE, 130, 149, 131, 12
-    PUSHBUTTON      "Edit Y Curve..", IDC_CURVE_EDITOR_MAIN_EDIT_Y_CURVE, 130, 165, 131, 11
-    PUSHBUTTON      "Edit Z Curve..", IDC_CURVE_EDITOR_MAIN_EDIT_Z_CURVE, 130, 179, 131, 12
-    PUSHBUTTON      "Edit W Curve..", IDC_CURVE_EDITOR_MAIN_EDIT_W_CURVE, 130, 195, 131, 12
+    GROUPBOX        "Default value", IDC_STATIC, 123, 59, 144, 32
+    EDITTEXT        IDC_CURVE_EDITOR_MAIN_X_CURVE, 129, 70, 131, 12, ES_AUTOHSCROLL
+    PUSHBUTTON      "Edit Curve..", IDC_CURVE_EDITOR_MAIN_EDIT_CURVE, 124, 97, 142, 14
 }
 
 
