Demo app: committing a preliminary version

--- a/Emerald/!apps/CMakeLists.txt
+++ b/Emerald/!apps/CMakeLists.txt
@@ -8,6 +8,7 @@ ADD_SUBDIRECTORY(ES31AppTemplate)
 ADD_SUBDIRECTORY(LW-AnimationDataExtractor)
 ADD_SUBDIRECTORY(SceneViewer)
 ADD_SUBDIRECTORY(TextureCompressor)
+ADD_SUBDIRECTORY(Test-DemoApp)
 ADD_SUBDIRECTORY(Test-DOF)
 ADD_SUBDIRECTORY(Test-HDR)
 ADD_SUBDIRECTORY(Test-Julia4D)
