Build system: Out-of-source builds are now supported

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -17,7 +17,7 @@ include (GenerateExportHeader)
 
 CONFIGURE_FILE ("${EMERALD_SOURCE_DIR}/include/config.h.in" "${EMERALD_SOURCE_DIR}/include/config.h")
 
-SET(CMAKE_INCLUDE_PATH "${EMERALD_BINARY_DIR}/include")
+SET(CMAKE_INCLUDE_PATH "${EMERALD_SOURCE_DIR}/include")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "${EMERALD_BINARY_DIR}/bin")
 
 MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar)
@@ -37,67 +37,67 @@ MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar
 ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
-INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/include")
-INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/deps/jpeg-6b")
-INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/deps/libpng-1.2.36")
-INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/deps/lwsdk")
-INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/deps/tinyxml2")
-INCLUDE_DIRECTORIES("${EMERALD_BINARY_DIR}/deps/zlib-1.2.8")
+INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
+INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/jpeg-6b")
+INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/libpng-1.2.36")
+INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/lwsdk")
+INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/tinyxml2")
+INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/zlib-1.2.8")
 INCLUDE_DIRECTORIES("gtest-1.6.0/include")
 INCLUDE_DIRECTORIES("gtest-1.6.0/")
 
-FILE(GLOB ColladaIncludes "${EMERALD_BINARY_DIR}/include/collada/*.h")
-FILE(GLOB ColladaSources "${EMERALD_BINARY_DIR}/src/collada/*.cc")
-FILE(GLOB CurveIncludes "${EMERALD_BINARY_DIR}/include/curve/*.h")
-FILE(GLOB CurveSources "${EMERALD_BINARY_DIR}/src/curve/*.cc")
-FILE(GLOB GeneralIncludes "${EMERALD_BINARY_DIR}/include/*.h")
-FILE(GLOB GeneralSources "${EMERALD_BINARY_DIR}/src/main.cc")
-FILE(GLOB GFXIncludes "${EMERALD_BINARY_DIR}/include/gfx/*.h")
-FILE(GLOB GFXSources "${EMERALD_BINARY_DIR}/src/gfx/*.cc")
-FILE(GLOB MeshIncludes "${EMERALD_BINARY_DIR}/include/mesh/*.h")
-FILE(GLOB MeshSources "${EMERALD_BINARY_DIR}/src/mesh/*.cc")
-FILE(GLOB OpenGLIncludes "${EMERALD_BINARY_DIR}/include/ogl/*.h")
-FILE(GLOB OpenGLSources "${EMERALD_BINARY_DIR}/src/ogl/*.cc")
-FILE(GLOB PostProcessingIncludes "${EMERALD_BINARY_DIR}/include/postprocessing/*.h")
-FILE(GLOB PostProcessingSources "${EMERALD_BINARY_DIR}/src/postprocessing/*.cc")
-FILE(GLOB ProceduralIncludes "${EMERALD_BINARY_DIR}/include/procedural/*.h")
-FILE(GLOB ProceduralSources "${EMERALD_BINARY_DIR}/src/procedural/*.cc")
-FILE(GLOB SceneIncludes "${EMERALD_BINARY_DIR}/include/scene/*.h")
-FILE(GLOB SceneSources "${EMERALD_BINARY_DIR}/src/scene/*.cc")
-FILE(GLOB ShIncludes "${EMERALD_BINARY_DIR}/include/sh/*.h")
-FILE(GLOB ShSources "${EMERALD_BINARY_DIR}/src/sh/*.cc")
-FILE(GLOB ShadersIncludes "${EMERALD_BINARY_DIR}/include/shaders/*.h")
-FILE(GLOB ShadersSources "${EMERALD_BINARY_DIR}/src/shaders/*.cc")
-FILE(GLOB SystemIncludes "${EMERALD_BINARY_DIR}/include/system/*.h")
-FILE(GLOB SystemSources "${EMERALD_BINARY_DIR}/src/system/*.cc")
-FILE(GLOB TextureIncludes "${EMERALD_BINARY_DIR}/include/texture/*.h")
-FILE(GLOB TextureSources "${EMERALD_BINARY_DIR}/src/texture/*.cc")
+FILE(GLOB ColladaIncludes "${EMERALD_SOURCE_DIR}/include/collada/*.h")
+FILE(GLOB ColladaSources "${EMERALD_SOURCE_DIR}/src/collada/*.cc")
+FILE(GLOB CurveIncludes "${EMERALD_SOURCE_DIR}/include/curve/*.h")
+FILE(GLOB CurveSources "${EMERALD_SOURCE_DIR}/src/curve/*.cc")
+FILE(GLOB GeneralIncludes "${EMERALD_SOURCE_DIR}/include/*.h")
+FILE(GLOB GeneralSources "${EMERALD_SOURCE_DIR}/src/main.cc")
+FILE(GLOB GFXIncludes "${EMERALD_SOURCE_DIR}/include/gfx/*.h")
+FILE(GLOB GFXSources "${EMERALD_SOURCE_DIR}/src/gfx/*.cc")
+FILE(GLOB MeshIncludes "${EMERALD_SOURCE_DIR}/include/mesh/*.h")
+FILE(GLOB MeshSources "${EMERALD_SOURCE_DIR}/src/mesh/*.cc")
+FILE(GLOB OpenGLIncludes "${EMERALD_SOURCE_DIR}/include/ogl/*.h")
+FILE(GLOB OpenGLSources "${EMERALD_SOURCE_DIR}/src/ogl/*.cc")
+FILE(GLOB PostProcessingIncludes "${EMERALD_SOURCE_DIR}/include/postprocessing/*.h")
+FILE(GLOB PostProcessingSources "${EMERALD_SOURCE_DIR}/src/postprocessing/*.cc")
+FILE(GLOB ProceduralIncludes "${EMERALD_SOURCE_DIR}/include/procedural/*.h")
+FILE(GLOB ProceduralSources "${EMERALD_SOURCE_DIR}/src/procedural/*.cc")
+FILE(GLOB SceneIncludes "${EMERALD_SOURCE_DIR}/include/scene/*.h")
+FILE(GLOB SceneSources "${EMERALD_SOURCE_DIR}/src/scene/*.cc")
+FILE(GLOB ShIncludes "${EMERALD_SOURCE_DIR}/include/sh/*.h")
+FILE(GLOB ShSources "${EMERALD_SOURCE_DIR}/src/sh/*.cc")
+FILE(GLOB ShadersIncludes "${EMERALD_SOURCE_DIR}/include/shaders/*.h")
+FILE(GLOB ShadersSources "${EMERALD_SOURCE_DIR}/src/shaders/*.cc")
+FILE(GLOB SystemIncludes "${EMERALD_SOURCE_DIR}/include/system/*.h")
+FILE(GLOB SystemSources "${EMERALD_SOURCE_DIR}/src/system/*.cc")
+FILE(GLOB TextureIncludes "${EMERALD_SOURCE_DIR}/include/texture/*.h")
+FILE(GLOB TextureSources "${EMERALD_SOURCE_DIR}/src/texture/*.cc")
 
 IF (INCLUDE_WEBCAM_MANAGER)
-    FILE(GLOB WebcamIncludes "${EMERALD_BINARY_DIR}/include/webcam/*.h")
-    FILE(GLOB WebcamSources "${EMERALD_BINARY_DIR}/src/webcam/*.cc")
+    FILE(GLOB WebcamIncludes "${EMERALD_SOURCE_DIR}/include/webcam/*.h")
+    FILE(GLOB WebcamSources "${EMERALD_SOURCE_DIR}/src/webcam/*.cc")
 
     FIND_LIBRARY(STRMIIDS_LIB strmiids)
 ENDIF (INCLUDE_WEBCAM_MANAGER)
 
 IF (INCLUDE_OBJECT_MANAGER)
-    FILE(GLOB ObjectManagerIncludes "${EMERALD_BINARY_DIR}/include/object_manager/*.h")
-    FILE(GLOB ObjectManagerSources  "${EMERALD_BINARY_DIR}/src/object_manager/*.cc")
+    FILE(GLOB ObjectManagerIncludes "${EMERALD_SOURCE_DIR}/include/object_manager/*.h")
+    FILE(GLOB ObjectManagerSources  "${EMERALD_SOURCE_DIR}/src/object_manager/*.cc")
 ENDIF (INCLUDE_OBJECT_MANAGER)
 
 IF (INCLUDE_CURVE_EDITOR)
-    FILE(GLOB CurveEditorIncludes "${EMERALD_BINARY_DIR}/include/curve_editor/*.h")
-    FILE(GLOB CurveEditorSources  "${EMERALD_BINARY_DIR}/src/curve_editor/*.cc")
+    FILE(GLOB CurveEditorIncludes "${EMERALD_SOURCE_DIR}/include/curve_editor/*.h")
+    FILE(GLOB CurveEditorSources  "${EMERALD_SOURCE_DIR}/src/curve_editor/*.cc")
 ENDIF (INCLUDE_CURVE_EDITOR)
 
 IF (INCLUDE_OPENCL)
-    FILE(GLOB OpenCLIncludes "${EMERALD_BINARY_DIR}/include/ocl/*.h")
-    FILE(GLOB OpenCLSources "${EMERALD_BINARY_DIR}/src/ocl/*.cc")
+    FILE(GLOB OpenCLIncludes "${EMERALD_SOURCE_DIR}/include/ocl/*.h")
+    FILE(GLOB OpenCLSources "${EMERALD_SOURCE_DIR}/src/ocl/*.cc")
 ENDIF (INCLUDE_OPENCL)
 
 IF (INCLUDE_SH_LIGHT_EDITOR)
-    FILE(GLOB ShLightEditorIncludes "${EMERALD_BINARY_DIR}/include/sh_light_editor/*.h")
-    FILE(GLOB ShLightEditorSources "${EMERALD_BINARY_DIR}/src/sh_light_editor/*.cc")
+    FILE(GLOB ShLightEditorIncludes "${EMERALD_SOURCE_DIR}/include/sh_light_editor/*.h")
+    FILE(GLOB ShLightEditorSources "${EMERALD_SOURCE_DIR}/src/sh_light_editor/*.cc")
 ENDIF (INCLUDE_SH_LIGHT_EDITOR)
 
 SET(AllSources ${GeneralSources}
@@ -193,13 +193,15 @@ ADD_EXECUTABLE(TEST ${TestSources} "gtest-1.6.0/src/gtest-all.cc")
 
 FIND_PACKAGE(OpenGL)
 
-TARGET_LINK_LIBRARIES(EMERALD ${OPENGL_LIBRARIES} ${STRMIIDS_LIB} LIB_JPEG LIB_PNG LIB_ZLIB tinyxml2static)
+ADD_SUBDIRECTORY(apps)
+ADD_SUBDIRECTORY(deps)
+
+TARGET_LINK_LIBRARIES(EMERALD ${OPENGL_LIBRARIES} ${STRMIIDS_LIB} lib_jpeg LIB_PNG LIB_ZLIB tinyxml2static)
 TARGET_LINK_LIBRARIES(TEST EMERALD)
-ADD_DEPENDENCIES(EMERALD LIB_JPEG)
+
+ADD_DEPENDENCIES(EMERALD lib_jpeg)
 ADD_DEPENDENCIES(EMERALD LIB_PNG)
 ADD_DEPENDENCIES(EMERALD LIB_ZLIB)
 ADD_DEPENDENCIES(EMERALD tinyxml2static)
 ADD_DEPENDENCIES(TEST EMERALD)
 
-ADD_SUBDIRECTORY(apps)
-ADD_SUBDIRECTORY(deps)
