--- a/Emerald/deps/jpeg-6b/CMakeLists.txt
+++ b/Emerald/deps/jpeg-6b/CMakeLists.txt
@@ -6,20 +6,21 @@ project (lib_jpeg)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 
-FILE(GLOB Includes"${lib_jpeg_BINARY_DIR}/jconfig.h")
-FILE(GLOB Sources "${lib_jpeg_BINARY_DIR}/jcomapi.c"
-                  "${lib_jpeg_BINARY_DIR}/jd*.c"
-                  "${lib_jpeg_BINARY_DIR}/jidct*.c"
-                  "${lib_jpeg_BINARY_DIR}/jerror.c"
-                  "${lib_jpeg_BINARY_DIR}/jmemmgr.c"
-                  "${lib_jpeg_BINARY_DIR}/jmemnobs.c"
-                  "${lib_jpeg_BINARY_DIR}/jquant1.c"
-                  "${lib_jpeg_BINARY_DIR}/jquant2.c"
-                  "${lib_jpeg_BINARY_DIR}/jutils.c")
+FILE(GLOB Includes "${lib_jpeg_SOURCE_DIR}/jconfig.h")
+FILE(GLOB Sources  "${lib_jpeg_SOURCE_DIR}/jcomapi.c"
+                   "${lib_jpeg_SOURCE_DIR}/jd*.c"
+                   "${lib_jpeg_SOURCE_DIR}/jidct*.c"
+                   "${lib_jpeg_SOURCE_DIR}/jerror.c"
+                   "${lib_jpeg_SOURCE_DIR}/jmemmgr.c"
+                   "${lib_jpeg_SOURCE_DIR}/jmemnobs.c"
+                   "${lib_jpeg_SOURCE_DIR}/jquant1.c"
+                   "${lib_jpeg_SOURCE_DIR}/jquant2.c"
+                   "${lib_jpeg_SOURCE_DIR}/jutils.c")
 
 SET(AllSources ${Sources})
 
-ADD_LIBRARY(LIB_JPEG STATIC ${Sources} ${Includes})
+ADD_LIBRARY(lib_jpeg STATIC ${Sources} ${Includes})
+SET_TARGET_PROPERTIES(lib_jpeg PROPERTIES LINKER_LANGUAGE C)
 
 SET(LIBRARY_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
