Fixed a regression where HDR files would not be copied to project binary directories

--- a/Emerald/apps/Test-DOF/CMakeLists.txt
+++ b/Emerald/apps/Test-DOF/CMakeLists.txt
@@ -33,6 +33,8 @@ INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
 FILE(GLOB GeneralIncludes "${TestDOF_SOURCE_DIR}/include/*.h")
 FILE(GLOB GeneralSources "${TestDOF_SOURCE_DIR}/src/*.cc")
 
+FILE(COPY "${TestDOF_SOURCE_DIR}/galileo_probe.hdr" DESTINATION "${TestDOF_BINARY_DIR}/")
+
 SET(AllTestDOFSources ${GeneralSources} )
 
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestDOFSources)
