Fixed recipe failed issues under Linux when building Emerald dependencies

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -36,7 +36,10 @@ MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar
   ENDIF(MSVC)
 ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+IF(MSVC)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+ENDIF(MSVC)
+
 INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/jpeg-6b")
 INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/libpng-1.2.36")
