--- a/Emerald/apps/Test-DemoApp/CMakeLists.txt
+++ b/Emerald/apps/Test-DemoApp/CMakeLists.txt
@@ -25,8 +25,10 @@ MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar
   LIST(APPEND ${SourcesVar} ${PrecompiledSource})
 ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
 
+IF(MSVC)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+ENDIF(MSVC)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 INCLUDE_DIRECTORIES("${Test-DemoApp_SOURCE_DIR}")
 INCLUDE_DIRECTORIES("${Test-DemoApp_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
