--- a/Emerald/apps/Test-Particles/CMakeLists.txt
+++ b/Emerald/apps/Test-Particles/CMakeLists.txt
@@ -25,7 +25,10 @@ MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar
   LIST(APPEND ${SourcesVar} ${PrecompiledSource})
 ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+IF(MSVC)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+ENDIF(MSVC)
+
 INCLUDE_DIRECTORIES("${TestParticles_SOURCE_DIR}")
 INCLUDE_DIRECTORIES("${TestParticles_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
