Fixes for Windows builds

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -15,6 +15,11 @@ OPTION(INCLUDE_WEBCAM_MANAGER  "Should include webcam manager code" OFF)
 # DO NOT MODIFY BELOW THIS LINE
 include (GenerateExportHeader)
 
+IF(MSVC)
+    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
+ENDIF(MSVC)
+
+
 CONFIGURE_FILE ("${EMERALD_SOURCE_DIR}/include/config.h.in" "${EMERALD_SOURCE_DIR}/include/config.h")
 
 SET(CMAKE_INCLUDE_PATH "${EMERALD_SOURCE_DIR}/include")
@@ -149,7 +154,7 @@ ADD_LIBRARY(EMERALD SHARED ${AllSources}
 GENERATE_EXPORT_HEADER( EMERALD
 	BASE_NAME EMERALD
 	EXPORT_MACRO_NAME _EMERALD_API
-	EXPORT_FILE_NAME ./include/generated_dll_exports.h
+	EXPORT_FILE_NAME ${EMERALD_SOURCE_DIR}/include/generated_dll_exports.h
 )
 
 SET(LIBRARY_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
