Introducing system_event_monitor for event emulation on POSIX platforms.

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -11,6 +11,11 @@ OPTION(INCLUDE_OPENCL          "Should include OpenCL code" OFF)
 OPTION(INCLUDE_SH_LIGHT_EDITOR "Should include SH light editor code" OFF)
 OPTION(INCLUDE_WEBCAM_MANAGER  "Should include webcam manager code" OFF)
 
+IF (!MSVC)
+    # Posix does not support events, as found in Windows. Emerald provides an emulation layer
+	# for the functionality, based on conditional variables.
+	ADD_DEFINITIONS(-DUSE_EMULATED_EVENTS)
+ENDIF(!MSVC)
 
 # DO NOT MODIFY BELOW THIS LINE
 include (GenerateExportHeader)
