--- a/Emerald/deps/jpeg-6b/CMakeLists.txt
+++ b/Emerald/deps/jpeg-6b/CMakeLists.txt
@@ -19,10 +19,9 @@ FILE(GLOB Sources  "${lib_jpeg_SOURCE_DIR}/jcomapi.c"
                    "${lib_jpeg_SOURCE_DIR}/jquant2.c"
                    "${lib_jpeg_SOURCE_DIR}/jutils.c")
 
-SET(AllSources ${Sources})
-
 ADD_LIBRARY(lib_jpeg STATIC ${Sources} ${Includes})
-SET_TARGET_PROPERTIES(lib_jpeg PROPERTIES LINKER_LANGUAGE C)
+SET_TARGET_PROPERTIES(lib_jpeg PROPERTIES LINKER_LANGUAGE           C
+                                          POSITION_INDEPENDENT_CODE ON)
 
 SET(LIBRARY_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
