--- a/Emerald/deps/libpng-1.2.36/CMakeLists.txt
+++ b/Emerald/deps/libpng-1.2.36/CMakeLists.txt
@@ -14,7 +14,8 @@ FILE(GLOB Sources "${lib_png_SOURCE_DIR}/*.c")
 SET(AllSources ${Sources})
 
 ADD_LIBRARY(LIB_PNG STATIC ${Sources} ${Includes})
-SET_TARGET_PROPERTIES(LIB_PNG PROPERTIES LINKER_LANGUAGE C)
+SET_TARGET_PROPERTIES(LIB_PNG PROPERTIES LINKER_LANGUAGE           C
+                                         POSITION_INDEPENDENT_CODE ON)
 
 ADD_DEPENDENCIES(LIB_PNG LIB_ZLIB)
 
