--- a/Emerald/deps/zlib-1.2.8/CMakeLists.txt
+++ b/Emerald/deps/zlib-1.2.8/CMakeLists.txt
@@ -14,7 +14,8 @@ FILE(GLOB Sources "${lib_zlib_SOURCE_DIR}/*.c")
 SET(AllSources ${Sources})
 
 ADD_LIBRARY(LIB_ZLIB STATIC ${Sources} ${Includes})
-SET_TARGET_PROPERTIES(LIB_ZLIB PROPERTIES LINKER_LANGUAGE C)
+SET_TARGET_PROPERTIES(LIB_ZLIB PROPERTIES LINKER_LANGUAGE           C
+                                          POSITION_INDEPENDENT_CODE ON)
 
 SET(LIBRARY_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
