Nearly all projects compile now (but fail to link due to missing entrypoints on Emerald side)

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -2,7 +2,7 @@
 # refer to the root source directory of the project as ${HELLO_SOURCE_DIR} and 
 # to the root binary directory of the project as ${HELLO_BINARY_DIR}. 
 cmake_minimum_required (VERSION 2.8) 
-project (EMERALD) 
+project (EMERALD C CXX) 
 
 # Options
 OPTION(INCLUDE_CURVE_EDITOR    "Should include curve editor code" ON)
@@ -15,11 +15,11 @@ IF (!MSVC)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 ENDIF (!MSVC)
 
-#IF (!MSVC)
+IF (!MSVC)
     # Posix does not support events, as found in Windows. Emerald provides an emulation layer
-	# for the functionality, based on conditional variables.
-	ADD_DEFINITIONS(-DUSE_EMULATED_EVENTS)
-#ENDIF(!MSVC)
+    # for the functionality, based on conditional variables.
+    ADD_DEFINITIONS(-DUSE_EMULATED_EVENTS)
+ENDIF(!MSVC)
 
 # DO NOT MODIFY BELOW THIS LINE
 include (GenerateExportHeader)
@@ -45,7 +45,7 @@ MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar
                                            OBJECT_OUTPUTS "${PrecompiledBinary}")
     SET_SOURCE_FILES_PROPERTIES(${Sources}
                                 PROPERTIES COMPILE_FLAGS "/W3 /analyze /Yu\"${PrecompiledHeader}\" /FI\"${PrecompiledHeader}\" /Fp\"${PrecompiledBinary}\""
-                                           OBJECT_DEPENDS "${PrecompiledBinary}")  
+                                           OBJECT_DEPENDS "${PrecompiledBinary}")
     LIST(APPEND ${SourcesVar} ${PrecompiledSource})
   ENDIF(MSVC)
 ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
@@ -63,30 +63,30 @@ INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/zlib-1.2.8")
 INCLUDE_DIRECTORIES("gtest-1.6.0/include")
 INCLUDE_DIRECTORIES("gtest-1.6.0/")
 
-FILE(GLOB ColladaIncludes "${EMERALD_SOURCE_DIR}/include/collada/*.h")
-FILE(GLOB ColladaSources "${EMERALD_SOURCE_DIR}/src/collada/*.cc")
-FILE(GLOB CurveIncludes "${EMERALD_SOURCE_DIR}/include/curve/*.h")
-FILE(GLOB CurveSources "${EMERALD_SOURCE_DIR}/src/curve/*.cc")
-FILE(GLOB GeneralIncludes "${EMERALD_SOURCE_DIR}/include/*.h")
-FILE(GLOB GeneralSources "${EMERALD_SOURCE_DIR}/src/main.cc")
-FILE(GLOB GFXIncludes "${EMERALD_SOURCE_DIR}/include/gfx/*.h")
-FILE(GLOB GFXSources "${EMERALD_SOURCE_DIR}/src/gfx/*.cc")
-FILE(GLOB MeshIncludes "${EMERALD_SOURCE_DIR}/include/mesh/*.h")
-FILE(GLOB MeshSources "${EMERALD_SOURCE_DIR}/src/mesh/*.cc")
-FILE(GLOB OpenGLIncludes "${EMERALD_SOURCE_DIR}/include/ogl/*.h")
-FILE(GLOB OpenGLSources "${EMERALD_SOURCE_DIR}/src/ogl/*.cc")
+FILE(GLOB ColladaIncludes        "${EMERALD_SOURCE_DIR}/include/collada/*.h")
+FILE(GLOB ColladaSources         "${EMERALD_SOURCE_DIR}/src/collada/*.cc")
+FILE(GLOB CurveIncludes          "${EMERALD_SOURCE_DIR}/include/curve/*.h")
+FILE(GLOB CurveSources           "${EMERALD_SOURCE_DIR}/src/curve/*.cc")
+FILE(GLOB GeneralIncludes        "${EMERALD_SOURCE_DIR}/include/*.h")
+FILE(GLOB GeneralSources         "${EMERALD_SOURCE_DIR}/src/main.cc")
+FILE(GLOB GFXIncludes            "${EMERALD_SOURCE_DIR}/include/gfx/*.h")
+FILE(GLOB GFXSources             "${EMERALD_SOURCE_DIR}/src/gfx/*.cc")
+FILE(GLOB MeshIncludes           "${EMERALD_SOURCE_DIR}/include/mesh/*.h")
+FILE(GLOB MeshSources            "${EMERALD_SOURCE_DIR}/src/mesh/*.cc")
+FILE(GLOB OpenGLIncludes         "${EMERALD_SOURCE_DIR}/include/ogl/*.h")
+FILE(GLOB OpenGLSources          "${EMERALD_SOURCE_DIR}/src/ogl/*.cc")
 FILE(GLOB PostProcessingIncludes "${EMERALD_SOURCE_DIR}/include/postprocessing/*.h")
-FILE(GLOB PostProcessingSources "${EMERALD_SOURCE_DIR}/src/postprocessing/*.cc")
-FILE(GLOB ProceduralIncludes "${EMERALD_SOURCE_DIR}/include/procedural/*.h")
-FILE(GLOB ProceduralSources "${EMERALD_SOURCE_DIR}/src/procedural/*.cc")
-FILE(GLOB SceneIncludes "${EMERALD_SOURCE_DIR}/include/scene/*.h")
-FILE(GLOB SceneSources "${EMERALD_SOURCE_DIR}/src/scene/*.cc")
-FILE(GLOB ShadersIncludes "${EMERALD_SOURCE_DIR}/include/shaders/*.h")
-FILE(GLOB ShadersSources "${EMERALD_SOURCE_DIR}/src/shaders/*.cc")
-FILE(GLOB SystemIncludes "${EMERALD_SOURCE_DIR}/include/system/*.h")
-FILE(GLOB SystemSources "${EMERALD_SOURCE_DIR}/src/system/*.cc")
-FILE(GLOB TextureIncludes "${EMERALD_SOURCE_DIR}/include/texture/*.h")
-FILE(GLOB TextureSources "${EMERALD_SOURCE_DIR}/src/texture/*.cc")
+FILE(GLOB PostProcessingSources  "${EMERALD_SOURCE_DIR}/src/postprocessing/*.cc")
+FILE(GLOB ProceduralIncludes     "${EMERALD_SOURCE_DIR}/include/procedural/*.h")
+FILE(GLOB ProceduralSources      "${EMERALD_SOURCE_DIR}/src/procedural/*.cc")
+FILE(GLOB SceneIncludes          "${EMERALD_SOURCE_DIR}/include/scene/*.h")
+FILE(GLOB SceneSources           "${EMERALD_SOURCE_DIR}/src/scene/*.cc")
+FILE(GLOB ShadersIncludes        "${EMERALD_SOURCE_DIR}/include/shaders/*.h")
+FILE(GLOB ShadersSources         "${EMERALD_SOURCE_DIR}/src/shaders/*.cc")
+FILE(GLOB SystemIncludes         "${EMERALD_SOURCE_DIR}/include/system/*.h")
+FILE(GLOB SystemSources          "${EMERALD_SOURCE_DIR}/src/system/*.cc")
+FILE(GLOB TextureIncludes        "${EMERALD_SOURCE_DIR}/include/texture/*.h")
+FILE(GLOB TextureSources         "${EMERALD_SOURCE_DIR}/src/texture/*.cc")
 
 IF (INCLUDE_WEBCAM_MANAGER)
     FILE(GLOB WebcamIncludes "${EMERALD_SOURCE_DIR}/include/webcam/*.h")
@@ -218,7 +218,7 @@ FIND_PACKAGE(OpenGL)
 ADD_SUBDIRECTORY(apps)
 ADD_SUBDIRECTORY(deps)
 
-TARGET_LINK_LIBRARIES(EMERALD ${OPENGL_LIBRARIES} ${STRMIIDS_LIB} lib_jpeg LIB_PNG LIB_ZLIB tinyxml2static)
+TARGET_LINK_LIBRARIES(EMERALD ${OPENGL_LIBRARIES} ${STRMIIDS_LIB} lib_jpeg LIB_PNG LIB_ZLIB tinyxml2static pthread)
 TARGET_LINK_LIBRARIES(TEST EMERALD)
 
 ADD_DEPENDENCIES(EMERALD lib_jpeg)
