--- a/Emerald/apps/Test-ComputeShaderSSBO/CMakeLists.txt
+++ b/Emerald/apps/Test-ComputeShaderSSBO/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllTestComputeShaderSSBOSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestComputeShaderSSBOSources)
 
 ADD_EXECUTABLE(TestComputeShaderSSBO WIN32 ${AllTestComputeShaderSSBOSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(TestComputeShaderSSBO PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(TestComputeShaderSSBO PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
