--- a/Emerald/apps/Test-DOF/CMakeLists.txt
+++ b/Emerald/apps/Test-DOF/CMakeLists.txt
@@ -43,7 +43,10 @@ SET(AllTestDOFSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestDOFSources)
 
 ADD_EXECUTABLE(TestDOF WIN32 ${AllTestDOFSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(TestDOF PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(TestDOF PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
