--- a/Emerald/apps/Test-HDR/CMakeLists.txt
+++ b/Emerald/apps/Test-HDR/CMakeLists.txt
@@ -43,7 +43,10 @@ SET(AllTestHDRSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestHDRSources)
 
 ADD_EXECUTABLE(TestHDR WIN32 ${AllTestHDRSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(TestHDR PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(TestHDR PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
