--- a/Emerald/apps/ColladaConverter/CMakeLists.txt
+++ b/Emerald/apps/ColladaConverter/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllColladaConverterSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllColladaConverterSources)
 
 ADD_EXECUTABLE(ColladaConverter WIN32 ${AllColladaConverterSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(ColladaConverter PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(ColladaConverter PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
