--- a/Emerald/apps/ES31AppTemplate/CMakeLists.txt
+++ b/Emerald/apps/ES31AppTemplate/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllES31AppTemplateSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllES31AppTemplateSources)
 
 ADD_EXECUTABLE(ES31AppTemplate WIN32 ${AllES31AppTemplateSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(ES31AppTemplate PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(ES31AppTemplate PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
