--- a/Emerald/apps/SceneViewer/CMakeLists.txt
+++ b/Emerald/apps/SceneViewer/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllSceneViewerSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllSceneViewerSources)
 
 ADD_EXECUTABLE(SceneViewer WIN32 ${AllSceneViewerSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(SceneViewer PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(SceneViewer PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
