--- a/Emerald/apps/Test-Julia4D/CMakeLists.txt
+++ b/Emerald/apps/Test-Julia4D/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllTestJulia4DSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestJulia4DSources)
 
 ADD_EXECUTABLE(TestJulia4D WIN32 ${AllTestJulia4DSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(TestJulia4D PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(TestJulia4D PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
