--- a/Emerald/apps/Test-ObjectBrowser/CMakeLists.txt
+++ b/Emerald/apps/Test-ObjectBrowser/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllTestObjectBrowserSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestObjectBrowserSources)
 
 ADD_EXECUTABLE(TestObjectBrowser WIN32 ${AllTestObjectBrowserSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(TestObjectBrowser PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(TestObjectBrowser PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
