--- a/Emerald/apps/Test-Uber/CMakeLists.txt
+++ b/Emerald/apps/Test-Uber/CMakeLists.txt
@@ -41,7 +41,10 @@ SET(AllTestUberSources ${GeneralSources} )
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllTestUberSources)
 
 ADD_EXECUTABLE(TestUber WIN32 ${AllTestUberSources} ${GeneralIncludes})
-SET_TARGET_PROPERTIES(TestUber PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+
+IF (MSVC)
+    SET_TARGET_PROPERTIES(TestUber PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
