Fixed a bunch of new compilation/building errors under Windows

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -218,7 +218,11 @@ FIND_PACKAGE(OpenGL)
 ADD_SUBDIRECTORY(apps)
 ADD_SUBDIRECTORY(deps)
 
-TARGET_LINK_LIBRARIES(EMERALD ${OPENGL_LIBRARIES} ${STRMIIDS_LIB} lib_jpeg LIB_PNG LIB_ZLIB tinyxml2static pthread)
+IF (!MSVC)
+    SET (ADDITIONAL_LIBS pthread)
+ENDIF (!MSVC)
+
+TARGET_LINK_LIBRARIES(EMERALD ${OPENGL_LIBRARIES} ${STRMIIDS_LIB} lib_jpeg LIB_PNG LIB_ZLIB tinyxml2static ${ADDITIONAL_LIBS} )
 TARGET_LINK_LIBRARIES(TEST EMERALD)
 
 ADD_DEPENDENCIES(EMERALD lib_jpeg)
